# iShelt_backend

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  rustc-ice-2024-05-14T22_07_48-68702.txt  rustc-ice-2024-05-14T22_07_48-68703.txt
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
src/: auth.rs  lib.rs  main.rs  models.rs  schema.rs
src/auth/: auth.rs
src/controllers/: mod.rs  post_controller.rs  user_controller.rs
src/handlers/: mod.rs  user_handlers.rs
src/models/: auth_models.rs  mod.rs  placemark_model.rs  post_model.rs  user_model.rs
