[package]
name = "my-redis"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "9.2.0"
rocket = "0.5.0-rc.1"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rocket-jwt = "0.5.2"
chrono = "0.4.33"

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["json"]
